--- a/archivo_prueba.html
+++ b/archivo_prueba.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <h1>pagina prueba git</h1>
+    <h1>neuvo titulo   </h1>
     <h1> moificacion 24-11 8:29hs</h1>
 </body>
 </html>
